{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 91,
  "lineage": "88a3eda1-ec22-e90b-b9f3-9949ba6b4fb2",
  "resources": [
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0263766c3aeaa4446",
            "domain": "vpc",
            "id": "eipalloc-0263766c3aeaa4446",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-162-235-53.compute-1.amazonaws.com",
            "public_ip": "54.162.235.53",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e2e5104f310ffb5",
            "arn": "arn:aws:ec2:us-east-1:503561415191:instance/i-087f11171ae0dfeb9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-087f11171ae0dfeb9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05f25c40fc789c657",
            "private_dns": "ip-172-31-23-247.ec2.internal",
            "private_ip": "172.31.23.247",
            "public_dns": "ec2-54-91-52-222.compute-1.amazonaws.com",
            "public_ip": "54.91.52.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0001c7914b8b53ca2",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ec2_sg-20241104064745982600000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-077c225e787c94dfe",
            "tags": {
              "Name": "Study AppServer"
            },
            "tags_all": {
              "Name": "Study AppServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b118a645b7edab12"
            ]
          },
          "dependencies": [
            "module.instance.data.ct_config.config",
            "module.networking.data.aws_vpc.default",
            "module.networking.module.ec2_sg.aws_security_group.this",
            "module.networking.module.ec2_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561415191:vpc/vpc-01c3f2414300dfd1b",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-09ed8f09538eac3f2",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0e2409ea81943da27",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01c3f2414300dfd1b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bcab04d7e7470504",
            "owner_id": "503561415191"
          }
        }
      ]
    },
    {
      "module": "module.networking.module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561415191:security-group/sg-0b118a645b7edab12",
            "description": "Security group for ec2_sg",
            "egress": [],
            "id": "sg-0b118a645b7edab12",
            "ingress": [],
            "name": "ec2_sg-20241104064745982600000001",
            "name_prefix": "ec2_sg-",
            "owner_id": "503561415191",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_sg"
            },
            "tags_all": {
              "Name": "ec2_sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-01c3f2414300dfd1b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2310227629",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b118a645b7edab12",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.data.aws_vpc.default",
            "module.networking.module.ec2_sg.aws_security_group.this",
            "module.networking.module.ec2_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1507216224",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b118a645b7edab12",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.data.aws_vpc.default",
            "module.networking.module.ec2_sg.aws_security_group.this",
            "module.networking.module.ec2_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-584108187",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b118a645b7edab12",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.data.aws_vpc.default",
            "module.networking.module.ec2_sg.aws_security_group.this",
            "module.networking.module.ec2_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All IPV4 ICMP",
            "from_port": -1,
            "id": "sgrule-628595715",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-0b118a645b7edab12",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.data.aws_vpc.default",
            "module.networking.module.ec2_sg.aws_security_group.this",
            "module.networking.module.ec2_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-4015789781",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b118a645b7edab12",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.data.aws_vpc.default",
            "module.networking.module.ec2_sg.aws_security_group.this",
            "module.networking.module.ec2_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}